# cardinal-namespaces

./: Anchor.toml  Makefile  README.md  index.html  modules.html  package.json
api/: .env.local  package.json  (+1 more)
programs/cardinal-namespaces/: Cargo.toml
programs/cardinal-namespaces/src/: errors.rs  lib.rs  state.rs
programs/cardinal-namespaces/src/instructions/: claim_entry.rs  claim_entry_v2.rs  collect_global_funds.rs  collect_namespace_funds.rs  create_claim_request.rs  create_namespace.rs  init_entry.rs  init_global_namespace.rs  init_mint.rs  init_name_entry.rs  invalidate_entry.rs  invalidate_managed_entry.rs  invalidate_managed_reverse_entry.rs  invalidate_unmanaged_entry.rs  invalidate_unmanaged_reverse_entry.rs  mod.rs  revoke_entry.rs  revoke_reverse_entry.rs  set_entry_data.rs  set_entry_data_v2.rs  set_global_rent_authority.rs  set_global_update_authority.rs  set_namespace_reverse_entry.rs  set_reverse_entry.rs  update_claim_request.rs  update_entry_mint_metadata.rs  update_global_namespace.rs  update_namespace.rs
programs/cardinal-namespaces/src/instructions/context/: collect_context_funds.rs  mod.rs
programs/cardinal-namespaces/src/instructions/deprecated/: claim_entry.rs  init_entry.rs  revoke_entry.rs  set_reverse_entry.rs
programs/cardinal-namespaces/src/instructions/name_entry/: claim_name_entry.rs  close_name_entry.rs  init_name_entry.rs  init_name_entry_mint.rs  invalidate_expired_name_entry.rs  invalidate_transferable_name_entry.rs  mod.rs  revoke_name_entry.rs  update_name_entry_mint_metadata.rs
programs/cardinal-namespaces/src/instructions/namespace/: create_namespace.rs  update_namespace.rs
programs/cardinal-namespaces/src/instructions/requests/: approve_claim_request.rs  create_claim_request.rs  mod.rs  update_claim_request.rs
programs/cardinal-namespaces/src/instructions/reverse_name_entry/: invalidate_transferable_reverse_name_entry.rs  revoke_reverse_name_entry.rs  (+1 more)
(+74 files in other folders)
